# super-battle-royale

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
assets/maps/: arena.txt  cross.txt  pillars.txt
docs/: generic-network-backend-option.md
macros/: Cargo.toml
macros/src/: lib.rs
sbr-signaling/: Cargo.toml
sbr-signaling/src/: main.rs
scripts/: dev.sh
src/: args.rs  lib.rs  main.rs
src/game/: arena.rs  bot.rs  camera.rs  combat.rs  crt.rs  crt.wgsl  effects.rs  enemy.rs  footsteps.rs  hud.rs  lobby.rs  map.rs  match_flow.rs  mod.rs  music.rs  pathfind.rs  pickup.rs  ping.rs  player.rs  projectile.rs  shield.rs  state.rs
src/game/net/: backend.rs  client.rs  input.rs  mod.rs  policy.rs  protocol.rs  server.rs  spawn.rs
src/game/net/backends/: client.rs  mod.rs  offline.rs  server.rs
src/networking/: config.rs  input.rs  lobby.rs  mod.rs
tests/: replication.rs
