[workspace]
members = ["sbr-signaling"]
resolver = "2"

[package]
name = "super-battle-royale"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking", "mp3"] }
bevy_ggrs = "0.20"
bevy_matchbox = { version = "0.14", features = ["ggrs"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
